--- a/_config.yml
+++ b/_config.yml
@@ -13,23 +13,30 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Things that interest me
+title: Tech Docs
 email: thanapoom.p.music@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+description: The storage for technology related documentations.
+baseurl: "/tech-docs/" # the subpath of your site, e.g. /blog
+url: "https://thanapoom21.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: "just-the-docs"
 plugins:
   - jekyll-feed
 
+# Enable or disable the site search
+search_enabled: true
+
+# Aux links for the upper right navigation
+aux_links:
+  "Just the Docs on GitHub":
+    - "//github.com/pmarsceill/just-the-docs"
+
+# Color scheme currently only supports "dark" or nil (default)
+color_scheme: dark
+
+remote_theme: pmarsceill/just-the-docs
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
