--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,10 @@ url: "https://thanapoom21.github.io" # the base hostname & protocol for your sit
 
 # Build settings
 markdown: kramdown
-theme: "just-the-docs"
+remote_theme: pmarsceill/just-the-docs
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Enable or disable the site search
 search_enabled: true
@@ -31,12 +32,11 @@ search_enabled: true
 # Aux links for the upper right navigation
 aux_links:
   "Just the Docs on GitHub":
-    - "//github.com/pmarsceill/just-the-docs"
+    - "https://github.com/pmarsceill/just-the-docs"
 
 # Color scheme currently only supports "dark" or nil (default)
 color_scheme: dark
 
-remote_theme: pmarsceill/just-the-docs
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
