--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ plugins:
   - jekyll-feed
   - jekyll-remote-theme
 
+remote_theme: pmarsceill/just-the-docs
+
 # Enable or disable the site search
 search_enabled: true
 
