--- a/_config.yml
+++ b/_config.yml
@@ -16,17 +16,17 @@
 title: Tech Docs
 email: thanapoom.p.music@gmail.com
 description: The storage for technology related documentations.
-baseurl: "/tech-docs" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
-theme: "just-the-docs"
+# theme: "just-the-docs"
 plugins:
   - jekyll-feed
-  # - jekyll-remote-theme
+  - jekyll-remote-theme
 
-# remote_theme: pmarsceill/just-the-docs
+remote_theme: pmarsceill/just-the-docs
 
 # Enable or disable the site search
 search_enabled: true
